--- a/src/Components/Leftpen/LeftPane.css
+++ b/src/Components/Leftpen/LeftPane.css
@@ -1,3 +1,45 @@
 .leftpaneBox{
-background-color: red;
+
+flex: 3;
+}
+
+.lefpanecomponet{
+    padding: 20px;
+
+}
+.leftpanemanu{
+padding: 0;
+margin: 0;
+list-style: none;
+}
+.leftpaneMenuitem{
+display: flex;
+align-items: center;
+margin-bottom: 20px;
+}
+.leftpaneMenuItem{
+margin-right: 20px;
+}
+.leftpaneMenutext{
+
+}
+.pagepic{
+    width: 40px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.pageListItem{
+    display: flex;
+    align-items: center;
+ margin-bottom: 20px;
+}
+.pagename{
+    margin-left: 20px;
+}
+.likepagetitle{
+    align-content: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    
 }
