--- a/src/Components/Leftpen/LeftPane.css
+++ b/src/Components/Leftpen/LeftPane.css
@@ -4,7 +4,15 @@ flex: 3;
 height: calc(100vh - 50px);
 overflow-y: scroll;
 }
-
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background-color: rgb(245, 246, 247);
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(163, 163, 168);
+}
 .lefpanecomponet{
     padding: 20px;
 
